--- a/ui/src/main/resources/static-resources/index.html
+++ b/ui/src/main/resources/static-resources/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://akka.io/favicon.ico" type="image/x-icon" />
-    <title>💳 Fintech Workshop API Interface</title>
+    <title>💳 Akka Fintech Demo</title>
     <link rel="stylesheet" href="styles.css">
     <!-- gRPC-Web libraries -->
     <script src="https://unpkg.com/google-protobuf@3.21.2/google-protobuf.js"></script>
@@ -14,8 +14,7 @@
     <div class="top-bar"></div>
     <div class="container">
         <header>
-            <h1>💳 Fintech Workshop API Interface</h1>
-            <p class="subtitle">Interact with Akka SDK card payment services</p>
+            <h1>💳 Akka Fintech Demo</h1>
         </header>
 
         <main>
@@ -165,7 +164,7 @@
         </main>
 
         <footer>
-            <p>Powered by Akka SDK</p>
+            <p>Powered by Akka</p>
         </footer>
     </div>
 
