adding transaction cancel transaction timeout triggers cancel renaming ui to backoffice

--- a/backoffice/src/main/resources/static-resources/index.html
+++ b/backoffice/src/main/resources/static-resources/index.html
@@ -151,6 +151,10 @@
                                         <th>Idempotency Key</th>
                                         <th>Auth Result</th>
                                         <th>Auth Status</th>
+                                        <th>Capture Result</th>
+                                        <th>Capture Status</th>
+                                        <th>Cancel Result</th>
+                                        <th>Cancel Status</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
