Agent prompt improvements MCP improvements Tests fixed

--- a/backoffice/src/main/resources/static-resources/ui/index.html
+++ b/backoffice/src/main/resources/static-resources/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://akka.io/favicon.ico" type="image/x-icon" />
-    <title>💳 Akka Fintech Demo</title>
+    <title>💳 Akka Fintech Demo - Back Office</title>
     <link rel="stylesheet" href="styles.css">
     <!-- gRPC-Web libraries -->
     <script src="https://unpkg.com/google-protobuf@3.21.2/google-protobuf.js"></script>
@@ -14,7 +14,7 @@
     <div class="top-bar"></div>
     <div class="container">
         <header>
-            <h1>💳 Akka Fintech Demo</h1>
+            <h1>💳 Akka Fintech Demo - Back Office</h1>
         </header>
 
         <main>
