--- a/backoffice/src/main/resources/static-resources/chat-ui/index.html
+++ b/backoffice/src/main/resources/static-resources/chat-ui/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="https://akka.io/favicon.ico" type="image/x-icon" />
-    <title>💳 Akka Fintech Demo - AI assistant</title>
+    <title>💳 Akka Fintech Demo - Back Office AI assistant</title>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/chat/style.css">
     <style>
@@ -121,11 +121,12 @@
 <body>
 <div class="top-bar"></div>
 <div class="container">
-    <div class="hostname-row">
+   <!-- <div class="hostname-row">
         <span id="hostname" class="hostname-span"></span>
     </div>
+    -->
     <h1 class="chat-title">
-        💳 Akka Fintech Demo - AI assistant
+        💳 Akka Fintech Demo - Back Office AI assistant
     </h1>
     <div class="form-section">
         <form id="chat-form" autocomplete="off">
