Renamed existing Agent to Streaming. Added a non streaming agent to be used in request builder.

--- a/backoffice/src/main/resources/static-resources/chat-ui/index.html
+++ b/backoffice/src/main/resources/static-resources/chat-ui/index.html
@@ -330,7 +330,7 @@
         sendBtn.disabled = true;
 
         try {
-            const response = await fetch('/chat/ask', {
+            const response = await fetch('/chat/ask-stream', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
